--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,16 @@ services:
       - UPLOAD_MAX_SIZE=104857600
       - UPLOAD_LOCATION=./files
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
   postgres:
     image: postgres
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: always
     environment:
       - POSTGRES_PASSWORD=secretpassword
