--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:migrate:prod": "prisma migrate deploy && npm run create-test-user && npm run start:prod",
+    "start:migrate:prod": "prisma migrate deploy && npm run create-test-user:prod && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,7 +20,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "command": "npx ts-node ./src/scripts",
+    "command:prod": "node dist/scripts",
     "create-test-user": "npm run command create-test-user",
+    "create-test-user:prod": "npm run command:prod create-test-user",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev --name init"
   },
