--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   postgres:
     image: postgres
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-U postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -d uploader -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
